trunk/Archive2/59/d504cd51984328/output
main.cpp:5:111: error: 'S3' does not name a type
 template <template <template <typename> class, typename> class TTT, template <typename> class TT, typename T> S3 { };
                                                                                                               ^
main.cpp:5:117: warning: extra ';' [-Wpedantic]
 template <template <template <typename> class, typename> class TTT, template <typename> class TT, typename T> S3 { };
                                                                                                                     ^
main.cpp: In function 'int main()':
main.cpp:8:5: error: 'S3' was not declared in this scope
     S3<S2, S, int> s;
     ^
main.cpp:8:10: error: missing template arguments before ',' token
     S3<S2, S, int> s;
          ^
main.cpp:8:13: error: missing template arguments before ',' token
     S3<S2, S, int> s;
             ^
main.cpp:8:15: error: expected primary-expression before 'int'
     S3<S2, S, int> s;
               ^
